Fixes for content-size and scrollbar corner.

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,12 @@ body
 }
 
 /* - general styling ---------------------------------------- */
+a
+{
+    color: var(--linkColor);
+    text-decoration: none;
+}
+
 input,
 button
 {
@@ -74,10 +80,9 @@ hr
     border: 3px solid var(--scrollbarBgdColor);
 }
 
-a
+::-webkit-scrollbar-corner 
 {
-    color: var(--linkColor);
-    text-decoration: none;
+    background: rgba(0,0,0,0);
 }
 
 /* --------------------------------------------------- */
